STYLE Fix alignment

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -155,6 +155,7 @@ footer {
     }
     #hhpMultiLang {
       align-items: start !important;
+      margin-left: 14px;
     }
     .token-error-title {
       font-size: 1em;
@@ -164,6 +165,9 @@ footer {
     }
     .title {
       text-align: left;
+      margin-left: 20px;
+    }
+    .footer {
       margin-left: 20px;
     }
   }
